// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as a button of variant danger 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #2c0b0e;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #2c0b0e;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #2c0b0e;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active=""
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as a button of variant default 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #f8f9fa;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #f8f9fa;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #f8f9fa;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active=""
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as a button of variant info 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #032830;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #032830;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #032830;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active=""
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as a button of variant primary 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #031633;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #031633;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #031633;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active=""
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as a button of variant secondary 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #161719;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #161719;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #161719;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active=""
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as a button of variant success 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #051b11;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #051b11;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #051b11;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active=""
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as a button of variant warning 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #332701;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #332701;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #332701;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active=""
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as an active button of variant danger 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #2c0b0e;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #2c0b0e;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #2c0b0e;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active="active"
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as an active button of variant default 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #f8f9fa;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #f8f9fa;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #f8f9fa;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active="active"
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as an active button of variant info 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #032830;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #032830;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #032830;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active="active"
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as an active button of variant primary 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #031633;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #031633;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #031633;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active="active"
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as an active button of variant secondary 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #161719;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #161719;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #161719;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active="active"
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as an active button of variant success 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #051b11;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #051b11;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #051b11;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active="active"
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction as an active button of variant warning 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #332701;
}
.m:hover {
  text-decoration-line: none;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #332701;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #332701;
}


<button
  data-testid="list-group-item-action"
  class="a b c d e f g h i j k l m list-group-item-action"
  active="active"
>
  Action</button
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction with variant danger 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #2c0b0e;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #2c0b0e;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #2c0b0e;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active=""
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction with variant default 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #f8f9fa;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #f8f9fa;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #f8f9fa;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active=""
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction with variant info 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #032830;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #032830;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #032830;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active=""
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction with variant primary 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #031633;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #031633;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #031633;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active=""
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction with variant secondary 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #161719;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #161719;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #161719;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active=""
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction with variant success 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #051b11;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #051b11;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #051b11;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active=""
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create a ListItemGroupAction with variant warning 1`] = `
".a {
  width: 100%;
}
.b {
  color: rgba(33, 37, 41, 0.75);
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #332701;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #332701;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #332701;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active=""
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create an active ListItemGroupAction of variant danger 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #2c0b0e;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #2c0b0e;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #2c0b0e;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active="active"
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create an active ListItemGroupAction of variant default 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #f8f9fa;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #f8f9fa;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #f8f9fa;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active="active"
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create an active ListItemGroupAction of variant info 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #032830;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #032830;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #032830;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active="active"
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create an active ListItemGroupAction of variant primary 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #031633;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #031633;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #031633;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active="active"
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create an active ListItemGroupAction of variant secondary 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #161719;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #161719;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #161719;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active="active"
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create an active ListItemGroupAction of variant success 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #051b11;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #051b11;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #051b11;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active="active"
  >Action</a
>;
"
`;

exports[`components/ListGroup/ListGroupItemAction should create an active ListItemGroupAction of variant warning 1`] = `
".a {
  width: 100%;
}
.b {
  color: #212529;
}
.c {
  text-align: inherit;
}
.n {
  font-weight: 500;
}
.o {
  color: #646cff;
}
.q {
  text-decoration-line: inherit;
}
.j:hover {
  z-index: 1;
}
.k:hover {
  color: #000;
}
.l:hover {
  background-color: #332701;
}
.m:hover {
  text-decoration-line: none;
}
.p:hover {
  color: #535bf2;
}
.f:focus {
  z-index: 1;
}
.g:focus {
  color: #000;
}
.h:focus {
  background-color: #332701;
}
.i:focus {
  text-decoration-line: none;
}
.d:active {
  color: #212529;
}
.e:active {
  background-color: #332701;
}


<a
  data-testid="list-group-item-action"
  target=""
  rel=""
  class="n o p q a b c d e f g h i j k l m list-group-item-action"
  active="active"
  >Action</a
>;
"
`;
